# production-ai-systems

./: .gitignore  README.md  docker-compose.yml
01-rag-assistant/: .env.example  .gitignore  DEPLOYMENT.md  DOCS.html  Dockerfile  README.md  docker-compose.yml  rag_system.py  requirements.txt
01-rag-assistant/config/: settings.py
01-rag-assistant/src/: app.py  rag_system.py
01-rag-assistant/src/api/: main.py
01-rag-assistant/src/ingestion/: ingest.py
01-rag-assistant/src/monitoring/: metrics.py
01-rag-assistant/src/rag/: chunker.py  embedder.py  generator.py  pipeline.py  reranker.py  retriever.py
01-rag-assistant/src/store/: chroma_store.py  pinecone_store.py
01-rag-assistant/tests/: conftest.py  test_api.py  test_chunker.py  test_generator.py  test_ingestor.py  test_metrics.py  test_pipeline.py  test_reranker.py  test_retriever.py
02-mlops-pipeline/: .gitignore  DOCS.html  README.md  USAGE.md  requirements.txt  run_mlops_pipeline.py
02-mlops-pipeline/config/: pipeline.yaml
02-mlops-pipeline/docs/: eval_results.json
02-mlops-pipeline/src/: api.py  config.py  dagster_definitions.py
02-mlops-pipeline/src/data/: data_processor.py
02-mlops-pipeline/src/training/: trainer.py
03-computer-vision/: .gitignore  DOCS.html  Dockerfile  README.md  benchmark.py  docker-compose.yml  requirements.txt
03-computer-vision/src/api/: main.py
03-computer-vision/src/inference/: detector.py
03-computer-vision/tests/: test_api.py  test_benchmark.py  test_detector.py
04-resume-screening/: .env.example  .gitignore  .pre-commit-config.yaml  DOCS.html  Dockerfile  Makefile  PROJECT_SETUP_SUMMARY.md  README.md  docker-compose.yml  feature_engineering.py  generate_jobs.py  preprocess_data.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test_generator.py
04-resume-screening/.github/workflows/: ci.yml  deploy.yml
04-resume-screening/data/: jobs.json
04-resume-screening/data/features/: matching_features.csv
04-resume-screening/data/processed/: jobs_processed.csv  jobs_processed.json  resumes_processed.csv  resumes_processed.json
04-resume-screening/docs/: api_documentation.md  deployment_guide.md  model_documentation.md
04-resume-screening/frontend/: package.json
04-resume-screening/frontend/src/: App.js
04-resume-screening/notebooks/: 01_data_exploration.ipynb  data_exploration.ipynb  data_exploration_notebook.ipynb
04-resume-screening/notebooks/.ipynb_checkpoints/: 01_data_exploration-checkpoint.ipynb  data_exploration_notebook-checkpoint.ipynb
04-resume-screening/src/api/: main.py  schemas.py
04-resume-screening/src/data_generation/: generate_data.py  resume_generator.py
04-resume-screening/src/models/: schemas.py
04-resume-screening/src/monitoring/: bias_monitor.py
04-resume-screening/src/processing/: pdf_parser.py  quality_checker.py
04-resume-screening/src/utils/: config.py
04-resume-screening/tests/: test_resume_generation.py
05-pharma-ai/: Dockerfile  README.md  aspirin.sdf  caffeine.sdf  environment.yml  ibuprofen.sdf  requirements.txt  start_pharma_env.bat
05-pharma-ai/apps/: api.py
05-pharma-ai/scripts/: make_vina_box_from_docked.py  rmsd_trimethoprim.py
05-pharma-ai/src/: fragment_based_drug_design.py  ml_compound_prioritisation.py  molecular_docking_prep.py  molecular_property_analyzer.py
06-fraud-detection/: .gitignore  BUNDLE_SPEC.md  CLAUDE.md  DECISIONS.md  DOCS.html  INTERVIEW_PREP.md  README.md  mlflow.db  render.yaml  requirements.txt
06-fraud-detection/api/: main.py
06-fraud-detection/app/: main.py
06-fraud-detection/config/: config.yaml
06-fraud-detection/docs/: 00_project_overview.md  01_project_overview.md  02_data_understanding.md  03_feature_engineering.md  04_model_training.md  05_model_evaluation.md  06_threshold_optimisation.md  07_api_and_deployment.md  interview_prep.html  study_guide.html
06-fraud-detection/notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  03_imbalance_handling.ipynb  04_xgboost_tuning.ipynb  05_shap_explainability.ipynb  06_threshold_tuning.ipynb  07_api_and_deployment.ipynb  08_monitoring_and_drift.ipynb  README.md  mlflow.db
06-fraud-detection/outputs/figures/: 05_shap_force_plot.html
06-fraud-detection/outputs/models/: best_imbalance_model.pkl  best_xgb.pkl  imbalance_results.pkl
06-fraud-detection/outputs/models/bundle_v1/: feature_list.json  metadata.json  threshold.json
06-fraud-detection/src/: features.py  predict.py  train.py
06-fraud-detection/tests/: conftest.py  test_api.py  test_features.py  test_predict.py
07-dita-rag-pipeline/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
07-dita-rag-pipeline/app/: api.py  indexer.py  parser.py  retriever.py  ui.py
07-dita-rag-pipeline/data/: configuration.dita  installation.dita  troubleshooting.dita
webpage/: index.html
