[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-resume-screening"
version = "1.0.0"
description = "Production-ready AI-powered resume screening system using advanced NLP techniques"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["ai", "nlp", "resume", "screening", "machine-learning", "recruitment", "hr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "sentence-transformers==2.2.2",
    "scikit-learn==1.3.0",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "spacy==3.6.1",
    "fastapi==0.103.1",
    "uvicorn[standard]==0.23.2",
    "python-multipart==0.0.6",
    "pydantic==2.3.0",  # Already have this - good!
    "PyPDF2==3.0.1",
    "python-docx==0.8.11",
    "faker==19.6.2",    # Already have this - good!
    "sqlalchemy==2.0.20",
    "alembic==1.12.0",
    "prometheus-client==0.17.1",
    "mlflow==2.6.0",
    # Add these new dependencies for data quality pipeline:
    "jsonschema==4.19.0",
    "pytest==7.4.2",    # Move from dev if needed for main pipeline
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",        # Keep here too for dev workflow
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "flake8==6.0.0",
    "pre-commit==3.4.0",
]

# Optional: Add data-quality specific dependencies
data-quality = [
    "matplotlib==3.7.2",    # For quality visualization
    "seaborn==0.12.2",      # For advanced plotting
    "jupyter==1.0.0",       # For data exploration notebooks
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
]
test = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/yourusername/ai-resume-screening"
Documentation = "https://ai-resume-screening.readthedocs.io"
Repository = "https://github.com/yourusername/ai-resume-screening.git"
"Bug Tracker" = "https://github.com/yourusername/ai-resume-screening/issues"
Changelog = "https://github.com/yourusername/ai-resume-screening/blob/main/CHANGELOG.md"

[project.scripts]
resume-screen = "src.api.main:main"
generate-resumes = "src.data_generation.resume_generator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml", "*.json"]

# Black code formatting configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | data
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = true

# MyPy type checking configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "sklearn.*",
    "spacy.*",
    "faker.*",
]
ignore_missing_imports = true

# Ruff linting configuration (alternative to flake8)
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = ["src"]
known_third_party = ["fastapi", "pydantic", "sklearn", "pandas", "numpy"]
